# swarms-pytorch

./: CONTRIBUTING.md  LICENSE  README.md  code_quality.sh  example.py  mkdocs.yml  multi_modal_mergers.py  nnt.py  pyproject.toml  queen_bee_transformer_hierarchy.py  requirements.txt  sop.py  test.py  test_switch_moe_fix.py  train.py
.github/workflows/: python-publish.yml  unit-test.yml
docs/: 20_swarm_model_ideas.md  README.md  index.md  mkdocs.yml  vision.md
docs/overrides/: main.html
docs/swarms/: aco.md  firefly.md  index.md  pso.md  qb.md  so.md
examples/: ant_colony.py  fire_fly_example.py  fish_school_example.py  mixture_of_mambas.py  new_mergers.py  nnt.py  queen_bee_transformer_hierarchy_example.py  simple_moe.py  swarmalator_example.py
playground/: mixture_of_mambas.py  silu_visualization.py  swarmalator_example.py  switch_moe.py
scripts/: requirementstxt_to_pyproject.py
swarms_torch/: __init__.py  ant_colony_swarm.py  autoregressive.py  cellular_transformer.py  cen.py  drone_swarm.py  firefly.py  fish_school.py  graph_cellular_automa.py  hivemind_swarm_transformer.py  ma_agent.py  mixture_of_mamba.py  multi_swarm_pso.py  multi_swarm_pso2.py  multi_swarm_pso_transformer.py  neuronal_transformer.py  nnt.py  particle_swarm.py  queen_bee.py  sakana.py  spiral_optimization.py  transformer_pso.py
swarms_torch/moe/: README.md
tests/: ant_colony.py  cellular_swarm.py  fish_school.py  neuronal_transformer.py  particle_swarm.py  queen_bee.py  spiral_optimization.py  swarmalator_base.py  test_mixture_of_mamba.py  transformer_hive.py  transformer_pso.py
(+21 files in other folders)
